# adventofcode

./: .env.example  .gitignore  Makefile  README.md
2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.java  day7.java  go.mod  main.go
2022/core/: core.go  fetcher.go  generator.go  input.go
2022/day01/: day01.go
2022/day02/: day02.go
2022/day03/: day03.go
2023/: .gitignore  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  main.py
2024/: .gitignore  CMakeLists.txt  lint.sh  main.cpp
2024/core/: core.h  format.cpp  input.cpp  loader.cpp  timed.cpp
2024/day01/: day01.cpp  day01.h
2024/day02/: day02.cpp  day02.h
2024/day03/: day03.cpp  day03.h
2024/day04/: day04.cpp  day04.h
2024/day05/: day05.cpp  day05.h
2024/day06/: day06.cpp  day06.h
2024/day07/: day07.cpp  day07.h
2024/day08/: day08.cpp  day08.h
2024/day09/: day09.cpp  day09.h
2024/day10/: day10.cpp  day10.h
2024/day11/: day11.cpp  day11.h
2024/day12/: day12.cpp  day12.h
2024/day13/: day13.cpp  day13.h
2024/day14/: day14.cpp  day14.h
2024/day15/: day15.cpp  day15.h
2024/day16/: day16.cpp  day16.h
2024/day17/: day17.cpp  day17.h
2024/day18/: day18.cpp  day18.h
2024/day19/: day19.cpp  day19.h
2024/day20/: day20.cpp  day20.h
2024/day22/: day22.cpp  day22.h
2024/day23/: day23.cpp  day23.h
2024/day24/: day24.cpp  day24.h
2024/day25/: day25.cpp  day25.h
2024/util/: concat.cpp  exponent.cpp  format.cpp  input.cpp  loader.cpp  timed.cpp  util.h
2025/: .gitignore  2025.csproj  2025.sln  Program.cs
(+94 files in other folders)
